--- a/_posts/2013-10-17-citibike.md
+++ b/_posts/2013-10-17-citibike.md
@@ -6,9 +6,9 @@ date: 2013-10-17
 excerpt: "Can stop, don’t want to."
 ---
 
-Last week I spent three days in New York for the (excellent by the way) [FOWD](http://futureofwebdesign.com/nyc-2013/) conference. The weather was good and so I bought a 7-day pass to use the new [Citibike](http://citibikenyc.com/stations "Citibike Stations") system. This was turned out to be a fantastic decision.
+Last week I spent three days in New York for the (excellent by the way) [FOWD](http://futureofwebdesign.com/nyc-2013/) conference. The weather was good and so I bought a 7-day pass to use the new [Citibike](http://citibikenyc.com/stations "Citibike Stations") system. This turned out to be a fantastic decision.
 
-I’ve used the Boston Hubway bike share system for the last couple months and it’s moved me from skeptical bike snob to an enthusiastic evangelist. Bike shares belong in every first-class city. I was curious to see how much of a factor my familiarity with riding in Boston was in my evaluation. Would I be as psyched in a new city?
+I’ve used the Boston Hubway bike share system for the last couple months and it’s moved me from skeptical bike snob to an enthusiastic evangelist. *Bike shares belong in every first-class city*. I was curious to see how much of a factor my familiarity with riding in Boston was in my evaluation. Would I be as psyched in a new city?
 
 I had the good fortune to be staying with some friends in Brooklyn. But this meant a longer commute in to the event each day than those participants staying at the [hotel](http://www.yotel.com/Hotels/New-York-City "Yotel") nearby. I made the trip six times (three out and three back) and every one was unique.
 
