--- a/_posts/2007-07-23-mad-men.textile
+++ b/_posts/2007-07-23-mad-men.textile
@@ -2,7 +2,7 @@
 layout: post
 title: Mad Men
 date: 2007-07-23
-excerpt: I’m no good.
+excerpt: "I’m no good."
 ---
 
 I just checked out the first episode of AMC's "Mad Men":http://media.amctv.com/originals/madmen/. I was reeled in by the ad with the "great soundtrack":http://en.wikipedia.org/wiki/You_Know_I'm_No_Good. I'm not sure if it will become a regular for me, but I'll stick around for a few episodes to see where it goes. I did really like the portrayal of creative paralysis. The protagonist, "Draper":http://media.amctv.com/originals/madmen/cast/cast_bio_hamm.html, is sitting in a meeting still not knowing what he's going to say when the boss segues to him. Gut wrenching.
